<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:layout_editor_absoluteX="65dp"
    tools:layout_editor_absoluteY="0dp"


    <TextView
        android:id="@+id/textView"
        android:layout_width="141dp"
        android:layout_height="27dp"
        android:layout_marginBottom="20dp"
        android:text="@string/adresse_ip_du_broker"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="273dp"
        android:layout_height="64dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tcp_172_16_5_103_1883"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="377dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="269dp"
        android:layout_height="57dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:ems="30"
        android:inputType="textPersonName"
        android:text="@string/http_167_114_96_59_2223"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="52dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="159dp"
        android:layout_height="29dp"
        android:layout_marginBottom="20dp"
        android:text="@string/adresse_de_l_api"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp" />

</androidx.constraintlayout.widget.ConstraintLayout>